# ragpipe

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  PROGRESS_REPORT.md  README.md  ROADMAP.md  launch.py  pyproject.toml  run_tests.py  start.sh  test_server.py
.github/workflows/: ci.yml
cookbooks/: 01_basic_rag.py  02_context_engineering.py  03_knowledge_graph_rag.py  04_simulation_testing.py  05_agentic_retrieval.py  06_pipeline_dag.py
examples/: openai_pipeline.py  quickstart.py
ragpipe/: __init__.py  __main__.py  config.py  core.py
ragpipe-ui/: README.md  package.json
ragpipe-ui/src/app/: globals.css  layout.tsx  page.tsx
ragpipe-ui/src/components/: ChatMessage.tsx  GraphPanel.tsx  IngestPanel.tsx  ModelPicker.tsx  SettingsModal.tsx  Sidebar.tsx
ragpipe-ui/src/lib/: api.ts
ragpipe/agents/: __init__.py  adaptive.py  crag.py  planner.py  react.py  router.py  selfrag.py  smart_pipeline.py
ragpipe/cache/: __init__.py  embedding.py  semantic.py
ragpipe/chunkers/: __init__.py  base.py  contextual.py  parent_child.py  recursive.py  semantic.py  token.py
ragpipe/context/: __init__.py  window.py
ragpipe/embedders/: __init__.py  base.py  jina.py  ollama.py  openai.py  sentence_transformer.py  voyage.py
ragpipe/evaluation/: __init__.py  llm_judge.py  metrics.py
ragpipe/generators/: __init__.py  anthropic_gen.py  base.py  cohere_gen.py  gemini_gen.py  groq_gen.py  litellm_gen.py  mistral_gen.py  ollama_gen.py  openai_gen.py  registry.py
ragpipe/graph/: __init__.py  builder.py  community.py  entities.py  knowledge_graph.py  retriever.py
ragpipe/guardrails/: __init__.py  injection.py  pii.py  topic.py
ragpipe/intelligence/: __init__.py  analyzer.py
ragpipe/loaders/: __init__.py  csv_loader.py  directory.py  docx.py  html_loader.py  pdf.py  text.py  youtube_loader.py
ragpipe/memory/: __init__.py  conversation.py
ragpipe/observability/: __init__.py  otel.py  tracer.py
ragpipe/optimization/: __init__.py  optimizer.py  self_improving.py
ragpipe/pipeline/: __init__.py  dag.py
ragpipe/plugins/: __init__.py  registry.py
ragpipe/query/: __init__.py  expansion.py
ragpipe/rerankers/: __init__.py  base.py  cross_encoder.py
ragpipe/retrievers/: __init__.py  base.py  bm25_retriever.py  chroma_retriever.py  faiss_retriever.py  hybrid_retriever.py  numpy_retriever.py  qdrant_retriever.py
ragpipe/server/: __init__.py  app.py  storage.py
ragpipe/simulation/: __init__.py  runner.py
ragpipe/utils/: __init__.py  costs.py  retry.py
ragpipe/verification/: __init__.py  verifier.py
tests/: conftest.py  test_adaptive.py  test_advanced_eval.py  test_async.py  test_bm25.py  test_cache.py  test_chunkers.py  test_config.py  test_context_window.py  test_contextual.py  test_core.py  test_costs.py  test_crag.py  test_dag.py  test_dataset_intelligence.py  test_evaluation.py  test_generator_registry.py  test_graph_builder.py  test_graph_community.py  test_graph_entities.py  test_graph_retriever.py  test_guardrails.py  test_hybrid.py  test_knowledge_graph.py  test_llm_judge.py  test_loaders.py  test_memory.py  test_observability.py  test_optimizer.py  test_otel.py  test_parent_child.py  test_planner.py  test_plugin_registry.py  test_query_expansion.py  test_react.py  test_retrievers.py  test_retry.py  test_router.py  test_self_improving.py  test_selfrag.py  (+4 more)
