[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragpipe"
version = "2.0.0"
description = "Production-grade modular RAG framework with hybrid search, contextual chunking, query expansion, and pluggable components"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Shivam Shasheesh"}]
keywords = ["rag", "retrieval-augmented-generation", "llm", "faiss", "embeddings", "ai", "nlp", "hybrid-search", "bm25", "contextual-retrieval", "hyde"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.0",
    "tiktoken>=0.7.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
faiss = ["faiss-cpu>=1.7.4"]
openai = ["openai>=1.30.0"]
sentence-transformers = ["sentence-transformers>=2.7.0"]
pdf = ["pypdf2>=3.0.0"]
docx = ["python-docx>=1.1.0"]
eval = ["rouge-score>=0.1.2"]
server = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
]
anthropic = ["anthropic>=0.34.0"]
litellm = ["litellm>=1.40.0"]
voyage = ["voyageai>=0.3.0"]
jina = []
chroma = ["chromadb>=0.5.0"]
qdrant = ["qdrant-client>=1.10.0"]
config = ["pyyaml>=6.0"]
ollama = []
all = [
    "faiss-cpu>=1.7.4",
    "openai>=1.30.0",
    "sentence-transformers>=2.7.0",
    "pypdf2>=3.0.0",
    "python-docx>=1.1.0",
    "rouge-score>=0.1.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "anthropic>=0.34.0",
    "litellm>=1.40.0",
    "voyageai>=0.3.0",
    "chromadb>=0.5.0",
    "qdrant-client>=1.10.0",
    "pyyaml>=6.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/shivamongit/ragpipe"
Repository = "https://github.com/shivamongit/ragpipe"
Issues = "https://github.com/shivamongit/ragpipe/issues"

[tool.setuptools.packages.find]
include = ["ragpipe*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
